Fixed the wrapping of rating radio buttons on small screens

--- a/src/components/FeedbackForm/FeedbackForm.scss
+++ b/src/components/FeedbackForm/FeedbackForm.scss
@@ -12,6 +12,8 @@ $color-accent-pink: rgb(255, 106, 149);
     align-items: center;
     gap: 0.4rem;
 
+    flex-wrap: wrap;
+
     margin: 30px 0;
 
     & li {
